# InvisibleGo

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPER.md  Dockerfile  InvisibleGo.spec  README.md  desktop_main.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/: board.py  game.py  life_death.py  scoring.py  view.py
core/resolvers/: __init__.py  benson.py  chain.py  gnugo.py  gtp.py  katago.py  montecarlo.py
deploy/: Caddyfile  aws-provision.ps1  aws-provision.sh  invisiblego.service  setup-docker.sh  setup.sh
frontend/: cli.py  common.py
frontend/desktop/: __main__.py  app.py  network.py  widgets.py
frontend/web/: app.js  index.html  style.css
protocol/: messages.py
scripts/: aws-cost.ps1  aws-cost.sh  dev-up.ps1  dev-up.sh
tests/: render_endgame.py  smoke_web.py  snapshot.py  test_benson.py  test_board.py  test_desktop_imports.py  test_endgame_scenarios.py  test_full_game.py  test_game.py  test_matchmaker.py  test_protocol.py  test_resolvers.py  test_scoring.py  test_session.py  test_tcp_integration.py  test_web_marking_phase.py
transport/: session.py
transport/lan/: client.py  server.py
transport/web/: matchmaker.py  server.py
