[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "invisiblego"
version = "0.0.1"
description = "A hidden-information game on a 9x9 Go board."
requires-python = ">=3.11"

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
desktop = ["PySide6>=6.6"]
build = ["pyinstaller>=6.3"]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["core*", "frontend*", "protocol*", "transport*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
